@@ -1,5 +1,7 @@
 *SVN*
 
+* Added Base#clear_association_cache to empty all the cached associations #347 [Tobias Luetke]
+
 * Added more informative exceptions in establish_connection #356 [bitsweat]
 
 * Fixed that options[:counter_sql] was overwritten with interpolated sql rather than original sql #355 [bitsweat]
